jaml/examples/invalid/mixed_map_list.jaml
mixed_map_list:
  bar: 2
  - foo
